force-app/main/default/objects/DonationStaging__c/DonationStaging__c.object-meta.xml
<CustomObject>
    <label>Donation Staging</label>
    <nameField>
        <displayFormat>DS-{000000}</displayFormat>
        <label>Donation Staging Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Donation Stagings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>