force-app/main/default/objects/DonationStaging__c/fields/BatchTimestamp__c.field-meta.xml
<CustomField>
    <fullName>BatchTimestamp__c</fullName>
    <description>Time of transaction execution</description>
    <externalId>true</externalId>
    <label>BatchTimestamp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>