force-app/main/default/objects/DonationStaging__c/fields/Cardholder__c.field-meta.xml
<CustomField>
    <fullName>Cardholder__c</fullName>
    <label>Cardholder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>