force-app/main/default/objects/DonationStaging__c/fields/CurrencyId__c.field-meta.xml
<CustomField>
    <fullName>CurrencyId__c</fullName>
    <description>Transaction currency</description>
    <label>CurrencyId</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BYN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>