force-app/main/default/objects/DonationStaging__c/fields/OfferExpDate__c.field-meta.xml
<CustomField>
    <fullName>OfferExpDate__c</fullName>
    <label>OfferExpDate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>