force-app/main/default/objects/DonationStaging__c/fields/OrderId__c.field-meta.xml
<CustomField>
    <fullName>OrderId__c</fullName>
    <description>Order number in WebPay</description>
    <label>OrderId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>