force-app/main/default/objects/DonationStaging__c/fields/PaymentType__c.field-meta.xml
<CustomField>
    <fullName>PaymentType__c</fullName>
    <description>Successfully payment 1, 4, 10 
Canceled payment 5, 7, 9 
======================= 
1 - Completed 
2 - Declined 
3 - Pending 
4 - Authorized 
5 - Refunded 
6 - System 
7 - Voided 
8 - Failed 
9 - Partial Voided 
10 - Recurrent</description>
    <inlineHelpText>Successfully payment 1, 4, 10 
Canceled payment 5, 7, 9 
======================= 
1 - Completed 
2 - Declined 
3 - Pending 
4 - Authorized 
5 - Refunded 
6 - System 
7 - Voided 
8 - Failed 
9 - Partial Voided 
10 - Recurrent</inlineHelpText>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>