force-app/main/default/objects/DonationStaging__c/fields/RC__c.field-meta.xml
<CustomField>
    <fullName>RC__c</fullName>
    <label>RC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>