force-app/main/default/objects/DonationStaging__c/fields/RCText__c.field-meta.xml
<CustomField>
    <fullName>RCText__c</fullName>
    <label>RCText</label>
    <length>255</length>
    <type>Text</type>
</CustomField>