force-app/main/default/objects/DonationStaging__c/fields/RecurringToken__c.field-meta.xml
<CustomField>
    <fullName>RecurringToken__c</fullName>
    <label>RecurringToken</label>
    <length>255</length>
    <type>Text</type>
</CustomField>