force-app/main/default/objects/DonationStaging__c/fields/RRN__c.field-meta.xml
<CustomField>
    <fullName>RRN__c</fullName>
    <description>Transaction number in Visa/MasterCard</description>
    <inlineHelpText>Transaction number in Visa/MasterCard</inlineHelpText>
    <label>RRN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>