force-app/main/default/objects/DonationStaging__c/fields/SiteOrderId__c.field-meta.xml
<CustomField>
    <fullName>SiteOrderId__c</fullName>
    <description>Order number (name) assigned by the store</description>
    <label>SiteOrderId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>