force-app/main/default/objects/DonationStaging__c/fields/Terminal__c.field-meta.xml
<CustomField>
    <fullName>Terminal__c</fullName>
    <label>Terminal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>