force-app/main/default/objects/DonationStaging__c/fields/TransactionId__c.field-meta.xml
<CustomField>
    <fullName>TransactionId__c</fullName>
    <description>Transaction number</description>
    <externalId>true</externalId>
    <label>TransactionId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>