force-app/main/default/objects/DonationStaging__c/fields/WsbSignature__c.field-meta.xml
<CustomField>
    <fullName>WsbSignature__c</fullName>
    <description>Electronic signature.
The electronic signature is calculated if the Secret Key is specified in billing settings
http://www.sha1-online.com/</description>
    <label>WsbSignature</label>
    <length>255</length>
    <type>Text</type>
</CustomField>