force-app/main/default/objects/DonationStaging__c/fields/Xml__c.field-meta.xml
<CustomField>
    <fullName>Xml__c</fullName>
    <label>Xml</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>