force-app/main/default/objects/DonationStaging__c/recordTypes/Initiation.recordType-meta.xml
<RecordType>
    <fullName>Initiation</fullName>
    <active>true</active>
    <label>Initiation</label>
</RecordType>