force-app/main/default/objects/DonationStaging__c/recordTypes/One_time.recordType-meta.xml
<RecordType>
    <fullName>One_time</fullName>
    <active>true</active>
    <label>One Time</label>
</RecordType>