force-app/main/default/objects/DonationStaging__c/recordTypes/Recurring.recordType-meta.xml
<RecordType>
    <fullName>Recurring</fullName>
    <active>true</active>
    <label>Recurring</label>
</RecordType>