force-app/main/default/objects/DonationStaging__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>BatchTimestamp__c</columns>
    <columns>CustomerId__c</columns>
    <columns>SiteOrderId__c</columns>
    <columns>Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Timestamp__c</columns>
    <columns>Card__c</columns>
    <columns>Cardholder__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>PaymentType__c</columns>
    <columns>RCText__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>