force-app/main/default/objects/DonationStaging__c/listViews/Recurring_Payments.listView-meta.xml
<ListView>
    <fullName>Recurring_Payments</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>DonationStaging__c.Recurring</value>
    </filters>
    <label>Recurring Payments</label>
</ListView>